Begin implementation of video using Media Foundation. https://bugs.webkit.org/show_bug.cgi?id=131830

Reviewed by Brent Fulgham.


Source/WebCore:
* WebCore.vcxproj/WebCore.vcxproj:
* WebCore.vcxproj/WebCore.vcxproj.filters:
Added MediaPlayerPrivateMediaFoundation files.
* platform/graphics/MediaPlayer.cpp:
Include MediaPlayerPrivateMediaFoundation inside new USE(MEDIA_FOUNDATION) flag.
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp: Added.
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h: Added.

Source/WebKit/win:
* FullscreenVideoController.cpp:
* WebView.cpp:
Added new USE(MEDIA_FOUNDATION) flag to prevent using the unsupported fullscreen api.



Canonical link: https://commits.webkit.org/150087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167670 268f45cc-cd09-0410-ab3c-d52691b4dbfc